--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -20,4 +20,14 @@ jobs:
         uses: "actions/setup-node@v4"
         with:
           node-version: '22.x'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@ricardojonathanromero'
+
+      - name: Install dependencies
+        run: npm cli
+
+      - name: Publish to GitHub Packages
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
