--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Clone repo
-        uses: "actions/checkout@v4"
+        uses: actions/checkout@v4
 
       - name: Configure .npmrc
-        uses: "actions/setup-node@v4"
+        uses: actions/setup-node@v4
         with:
           node-version: '22.x'
           registry-url: 'https://npm.pkg.github.com'
